--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   },
   "dependencies": {
     "express": "~3.4.7",
-    "mincer": "~0.5.12"
+    "mincer": "~0.5.12",
+    "rfolderify": "~1.2.0",
+    "folderify": "~0.6.0",
+    "include-folder": "~0.7.0",
+    "glob": "~3.2.8"
   }
 }
