--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "./node_modules/.bin/dictator"
   },
   "dependencies": {
     "express": "~3.4.7",
@@ -11,6 +11,11 @@
     "rfolderify": "~1.2.0",
     "folderify": "~0.6.0",
     "include-folder": "~0.7.0",
-    "glob": "~3.2.8"
+    "glob": "~3.2.8",
+    "haml-coffee": "~1.14.1",
+    "watchy": "~0.4.2",
+    "browserify": "~3.30.2",
+    "nodemon": "~1.0.15",
+    "dictator": "~0.3.2"
   }
 }
